# ninja-rs

./: .gitignore  .rustfmt.toml  BUILD  Cargo.toml  DESIGN.md  README.md  WORKSPACE
.github/workflows/: tests.yml
desc/: Cargo.toml
desc/src/: ast.rs  lib.rs  repr.rs  tasks.rs
desc/src/snapshots/: ninja_desc__test__in_and_out_basic.snap  ninja_desc__test__success.snap
desc/tests/: desc_test.rs
desc/tests/inputs/: basic.ninja  rules_evaluate_lazily.ninja
desc/tests/snapshots/: desc_test__inputs@missing_toplevel_var.ninja.snap  desc_test__inputs@rules_evaluate_lazily.ninja.snap  desc_test__inputs@toplevel_var2.ninja.snap
examples/cmake-hello/: CMakeLists.txt  hello.cpp
interface/: Cargo.toml
interface/src/: lib.rs
metrics/: BUILD.bazel  Cargo.toml
metrics/src/: lib.rs
ninja/: BUILD.bazel  Cargo.toml
ninja/src/: lib.rs  main.rs
parse/: BUILD.bazel  Cargo.toml  DESIGN.md
parse/src/: ast.rs  desc.rs  env.rs  lexer.rs  lib.rs  parser.rs  repr.rs
parse/src/snapshots/: ninja_parse__parser__test__build_no_bindings-2.snap  ninja_parse__parser__test__build_no_bindings-3.snap  ninja_parse__parser__test__build_no_bindings-4.snap  ninja_parse__parser__test__build_no_bindings-5.snap  ninja_parse__parser__test__build_no_bindings-6.snap  ninja_parse__parser__test__build_no_bindings.snap  ninja_parse__parser__test__simple.snap  ninja_parse__parser_test__build_no_bindings-2.snap  ninja_parse__parser_test__build_no_bindings-3.snap  ninja_parse__parser_test__build_no_bindings-4.snap  ninja_parse__parser_test__build_no_bindings-5.snap  ninja_parse__parser_test__build_no_bindings-6.snap  ninja_parse__parser_test__build_no_bindings.snap  ninja_parse__parser_test__simple.snap  ninja_parse__test__in_and_out_basic.snap  ninja_parse__test__success.snap
parse/tests/: desc_test.rs  parse_test.rs
parse/tests/common/: mod.rs
parse/tests/desc_inputs/: missing_toplevel_var.ninja  toplevel_var1.ninja
parse/tests/inputs/: allow_nul.ninja  build_with_no_outputs.ninja  comments_in_odd_places_1.ninja  comments_in_odd_places_2.ninja  escape_lex_2.ninja  escape_lex_3.ninja  escape_lex_4.ninja  var2.ninja  var_in_path_1.ninja  whitespace_stripping.ninja
parse/tests/parse_inputs/: build_env.ninja  eof_at_assign.ninja  escape_lex_1.ninja  escape_lex_5.ninja  escape_lex_6.ninja  implicit_inputs_1.ninja  include_basic.ninja  include_basic.ninja_include  include_error.include  include_error.ninja  include_processing_error.include  include_processing_error.ninja  newline_at_assign.ninja  order_inputs_1.ninja  pool_usage.ninja  simple.ninja  symbols_in_values.ninja  toplevel_var2.ninja  var1.ninja  var_in_path_2.ninja  whitespace_stripping.ninja
parse/tests/snapshots/: desc_test__inputs@basic.ninja.snap  desc_test__inputs@toplevel_var1.ninja.snap  parse_test__inputs@allow_nul.ninja.snap  parse_test__inputs@basic.ninja.snap  parse_test__inputs@build_env.ninja.snap  parse_test__inputs@build_with_no_outputs.ninja.snap  parse_test__inputs@comments_in_odd_places_1.ninja.snap  parse_test__inputs@comments_in_odd_places_2.ninja.snap  parse_test__inputs@eof_at_assign.ninja.snap  parse_test__inputs@escape_lex_1.ninja.snap  parse_test__inputs@escape_lex_2.ninja.snap  parse_test__inputs@escape_lex_3.ninja.snap  parse_test__inputs@escape_lex_4.ninja.snap  parse_test__inputs@escape_lex_5.ninja.snap  parse_test__inputs@escape_lex_6.ninja.snap  parse_test__inputs@implicit_inputs_1.ninja.snap  parse_test__inputs@include_basic.ninja.snap  parse_test__inputs@include_error.ninja.snap  parse_test__inputs@include_processing_error.ninja.snap  parse_test__inputs@missing_toplevel_var.ninja.snap  parse_test__inputs@newline_at_assign.ninja.snap  parse_test__inputs@order_inputs_1.ninja.snap  parse_test__inputs@pool_usage.ninja.snap  parse_test__inputs@rules_evaluate_lazily.ninja.snap  parse_test__inputs@simple.ninja.snap  parse_test__inputs@symbols_in_values.ninja.snap  parse_test__inputs@toplevel_var1.ninja.snap  parse_test__inputs@toplevel_var2.ninja.snap  parse_test__inputs@var1.ninja.snap  parse_test__inputs@var2.ninja.snap  parse_test__inputs@var_in_path_1.ninja.snap  parse_test__inputs@var_in_path_2.ninja.snap  parse_test__inputs@whitespace_stripping.ninja.snap
paths/: Cargo.toml
paths/src/: lib.rs
src/: lib.rs  ninja.pest
tasks/: Cargo.toml
tasks/src/: lib.rs
