[package]
name = "ninja-desc"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

[dependencies]
ninja-interface = { path = "../interface" }
ninja-parse = { path = "../parse" }
string-interner = "^0.7.1"
thiserror = "^1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
