[package]
name = "ninja"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

description = "A rust implementation of the ninja build system."
license-file = "LICENSE"
readme = "README.md"
repository = "https://github.com/nikhilm/ninja-rs"
keywords = ["ninja", "build-system", "tooling"]
categories = ["development-tools", "build-systems"]


[dependencies]
ninja-parse = { path = "../parse" }
ninja-build = { path = "../build" }
ninja-tasks = { path = "../tasks" }
ninja-metrics = { path = "../metrics" }
once_cell = "^1.4"
num_cpus = "^1.0"
anyhow = "^1.0"
thiserror = "^1.0"
pico-args = "0.3"

# Temporary for the model.
petgraph = "^0.5"
