[package]
name = "ninja-parse"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

[dependencies]
ninja-paths = { path = "../paths" }
ninja-desc = { path = "../desc" }

[dev-dependencies]
insta = "^0.16.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
