[package]
name = "ninja-parse"
version = "0.1.0"
authors = ["Nikhil Marathe <nsm.nikhil@gmail.com>"]
edition = "2018"

description = "A lexer+parser for ninja build files."
license = "Apache-2.0"
homepage = "https://github.com/nikhilm/ninja-rs"
repository = "https://github.com/nikhilm/ninja-rs"
keywords = ["ninja", "build-system", "tooling"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
thiserror = "^1.0"
ninja-metrics = { path = "../metrics", version = "^0.2" }

[dev-dependencies]
insta = "^0.16.0"
globwalk = "0.8"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
